# predictive_pod_autoscaler

./: .dockerignore  .gitignore  .ppa_session  ANALYSIS_INDEX.md  EXPLORATION_SUMMARY.txt  FIXES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_SYSTEM_ANALYSIS.md  Makefile  NEXUS.md  PREDICTOR_ANALYSIS.md  PREDICTOR_REFERENCE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_FIX.md  README.md  START_HERE.md  TECHNICAL_DEBT_COMPLETE.md  TESTING_GUIDE.md  WHY_PARTIAL.md  live_comparison.sh  ppa-data-collection.md  ppa_startup.sh  pyproject.toml  requirements.operator.txt  requirements.txt
.github/: REFACTORING_STATUS.md  copilot-instructions.md
cli/: __main__.py  app.py  config.py  utils.py
cli/commands/: __init__.py  data.py  deploy.py  follow.py  model.py  monitor.py  onboard.py  startup.py  status.py  toolbox.py
common/: __init__.py  constants.py  feature_spec.py  promql.py
data-collection/: Dockerfile  cluster_state.txt  config.py  export_training_data.py  istio-telemetry.yaml  keep_portforwards.sh  prometheus-scrape-config.yaml  requirements.txt  test-app-deployment.yaml  traffic-gen-deployment.yaml  validate_training_data.py  verify_features.py  working_queries.md
data-collection/test-app/: app.py
data-collection/training-data/: .~lock.training_data.csv#  features_v1.txt  features_v2.txt  fixed_rep_2__failures.csv  fixed_rep_2__stats.csv  fixed_rep_2__stats_history.csv  training_data.csv  training_data.health.json  training_data_legacy.csv  training_data_v1_DEPRECATED.csv  training_data_v2.csv  training_data_v2.health.json
data/test-app/: Dockerfile  app.py  deployment.yaml
demo/: README.md  docker-compose.yaml
demo/backend/: .env.example  Dockerfile  demo_orchestrator.py  main.py  requirements.txt  selfheal.yaml
demo/frontend/: console.html  shop.html
deploy/: alertmanager-config.yaml  crd.yaml  cronjob-data-collector.yaml  grafana-dashboard-configmap.yaml  locustfile-configmap.yaml  model-upload-pod.yaml  operator-deployment.yaml  operator-servicemonitor.yaml  predictiveautoscaler.yaml  prometheus-rules.yaml  rbac.yaml  test-app-ppa.yaml  test-app-service.yaml  test-app-servicemonitor.yaml  traffic-gen-configmap.yaml  traffic-gen-deployment.yaml
deploy/nexus/: docker-compose.dev.yaml  nexus_traffic_map.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
deploy/opa/: nexus_policies.rego
deploy/templates/: predictiveautoscaler.yaml.tpl
deploy/traffic/: deployment.yaml.j2  locustfile.py.j2
deploy/traffic/profiles/: low.yaml  (+3 more)
docs/: ARCHITECTURE_REVIEW_CRITICAL.md  DEVELOPMENT.md  MIGRATION.md  PHASE_1_COMPLETION.md  PLAN-cli-rich-typer.md  README.md  REFACTORING_STRUCTURE.md  TECHNICAL_DEBT_STATUS.md  architecture.md  future_vision.md  index.md  ppa_commands.md  production_roadmap.md
docs/architecture/: architecture.md  data_collection.md  ml_operator.md  ml_pipeline.md  pipeline.json  queries.md
docs/archive/: data_collection_refactor.md  implementation_audit_5_march.md  plan-mlModelPipeline.prompt.md  ppa_phase2_architecture.md
docs/operator/: DOCUMENTATION_SUMMARY.md  README.md  api.md  architecture.md  commands.md  configuration.md  deployment.md  troubleshooting.md
docs/planning/: data_collection_refactor.md  ppa_phase2_architecture.md
docs/reference/: dockerfile_guide.md  ml_commands.md  operator_commands.md  ppa_commands.md  working_queries.md
docs/technical-debt/: README.md
model/: convert.py  evaluate.py  pipeline.py  train.py
model/artifacts/: .gitignore
model/champions/: .gitignore
operator/: Dockerfile  config.py  features.py  main.py  predictor.py  requirements.txt  scaler.py
operator/retraining/: controller.py  cronjob.yaml
scripts/: deploy_operator.sh  fixed_replica_test.sh  install_git_hooks.sh  onboard_app.sh  ppa-dashboard.json  ppa_redeploy.sh
scripts/archive/: ppa_startup.sh
src/nexus/: __init__.py
src/ppa/: __init__.py  config.py
tests/: locustfile.py  test_collection_quality.py  test_convert.py  test_e2e_pipeline.py  test_evaluate.py  test_feature_spec.py  test_phase3_retry_logic.py  test_pipeline_integration.py  test_pr11_feature_bounds.py  test_pr12_concept_drift.py  test_train.py
(+163 files in other folders)
