[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppa"
version = "1.0.0"
description = "Predictive Pod Autoscaler (PPA) - Intelligent Kubernetes Scaling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PPA Contributors"}
]
dependencies = [
    "kopf>=1.43.0",
    "kubernetes>=35.0.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    "scikit-learn>=1.5.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "prometheus-client>=0.19.0",
    "typer>=0.12.0",
    "rich>=14.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
operator = [
    "ai-edge-litert>=2.0.0",
]
model = [
    "tensorflow>=2.15.0",
    "scipy>=1.11.0",
]
dataflow = []
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]
all = [
    "ai-edge-litert>=2.0.0",
    "tensorflow>=2.15.0",
    "scipy>=1.11.0",
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]

[project.scripts]
ppa = "ppa.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
